src/test/run-pass/unique-deref.rs
fn main() {
    let i = ~100;
    assert *i == 100;
}