src/test/compile-fail/reserved-m128.rs
// error-pattern:reserved keyword

fn main() {
  let int m128 = 0;
}
